# photon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  index.html  package.json  photon-node.d.ts  photon-node.js  photon-node_bg.wasm  photon-node_bg.wasm.d.ts  webpack.config.js
.github/workflows/: ci.yml  compile_wasm.yaml
crate/: .travis.yml  Cargo.toml  README.md
crate/benches/: photon_benchmark.rs
crate/examples/: README.md  add_text.rs  example.rs  rotate.rs  seam_carver.rs  shear-rotate.rs  shear.rs
crate/src/: channels.rs  colour_spaces.rs  conv.rs  effects.rs  filters.rs  helpers.rs  iter.rs  lib.rs  monochrome.rs  multiple.rs  native.rs  noise.rs  padding.rs  tests.rs  text.rs  transform.rs
docs/: 0.bundle_1826103ac3175ffae67b.js  0.bundle_1826103ac3175ffae67b.js.map  0.bundle_198c0708bdd1e0ac7792.js  0.bundle_198c0708bdd1e0ac7792.js.map  0.bundle_478cfebd9156ee7a2306.js  0.bundle_478cfebd9156ee7a2306.js.map  0.bundle_4b4964166a17761e7064.js  0.bundle_4b4964166a17761e7064.js.map  0.bundle_50540cfe283844ffde73.js  0.bundle_50540cfe283844ffde73.js.map  0.bundle_5c67e4f0484e49415f93.js  0.bundle_5c67e4f0484e49415f93.js.map  0.bundle_66edbb94add97f1da28b.js  0.bundle_66edbb94add97f1da28b.js.map  0.bundle_959ea2c0a65f872bf4cb.js  0.bundle_959ea2c0a65f872bf4cb.js.map  0.bundle_c2cfcb8f4363714cbfcc.js  0.bundle_c2cfcb8f4363714cbfcc.js.map  0.bundle_df678b1cd2670d6e75f3.js  0.bundle_df678b1cd2670d6e75f3.js.map  2.bundle_24fe8cc2e5fb623a8733.js  2.bundle_24fe8cc2e5fb623a8733.js.map  2.bundle_4e178bcfbb2fecadec44.js  2.bundle_4e178bcfbb2fecadec44.js.map  2.bundle_546cee9e23e645a822ee.js  2.bundle_546cee9e23e645a822ee.js.map  2.bundle_61abb6480608d473b732.js  2.bundle_61abb6480608d473b732.js.map  2.bundle_62f3b9758ef66df481d6.js  2.bundle_62f3b9758ef66df481d6.js.map  2.bundle_df9307cc3c262fe8614c.js  2.bundle_df9307cc3c262fe8614c.js.map  3.bundle_b6c47847a8e7e815e45c.js  3.bundle_b6c47847a8e7e815e45c.js.map  3.bundle_c7f08d950042a348a908.js  3.bundle_c7f08d950042a348a908.js.map  3.bundle_e8efaf990131f926a2e4.js  3.bundle_e8efaf990131f926a2e4.js.map  3.bundle_edf3585df5a4ee56dbeb.js  3.bundle_edf3585df5a4ee56dbeb.js.map  (+16 more)
docs/docs/: aliases.js  all.html  dark.css  desaturate.v.html  fn.b_grayscale.html  fn.decompose_max.html  fn.decompose_min.html  fn.desaturate.html  fn.g_grayscale.html  fn.grayscale.html  fn.grayscale_human_corrected.html  fn.grayscale_shades.html  fn.inc_brightness.html  fn.monochrome.html  fn.r_grayscale.html  fn.sepia.html  fn.threshold.html  fn.tint.html  index.html  light.css  main.js  monochrome.v.html  r_grayscale.v.html  rustdoc.css  search-index.js  settings.html  source-files.js  source-script.js  tint.v.html
docs/docs/channels/: alter_blue_channel.v.html  alter_channel.v.html  alter_green_channel.v.html  alter_red_channel.v.html  alter_two_channels.v.html  fn.alter_blue_channel.html  fn.alter_channel.html  fn.alter_green_channel.html  fn.alter_red_channel.html  fn.alter_two_channels.html  fn.inc_blue_channel.html  fn.inc_channel.html  fn.inc_green_channel.html  fn.inc_red_channel.html  fn.inc_two_channels.html  fn.remove_blue_channel.html  fn.remove_channel.html  fn.remove_green_channel.html  fn.remove_red_channel.html  inc_blue_channel.v.html  inc_channel.v.html  inc_two_channels.v.html  index.html  remove_blue_channel.v.html
docs/docs/conv/: detect_fortyfivedeg_lines.v.html  detect_horizontal_lines.v.html  detect_hundredthirtyfive_deg_lines.v.html  detect_vertictal_lines.v.html  fn.box_blur.html  fn.detect_fortyfivedeg_lines.html  fn.detect_horizontal_lines.html  fn.detect_hundredthirtyfive_deg_lines.html  fn.detect_vertictal_lines.html  fn.edge_detection.html  fn.edge_one.html  fn.emboss.html  fn.gaussian_blur.html  fn.identity.html  fn.laplace.html  fn.sharpen.html  fn.sobel_horizontal.html  fn.sobel_vertical.html  index.html  sharpen.v.html  sidebar-items.js  sobel_horizontal.v.html  sobel_vertical.v.html
docs/docs/effects/: createGradientMap.v.html  create_gradient_map.v.html  fn.colorize.html  fn.createGradientMap.html  fn.create_gradient_map.html  fn.duotone.html  fn.halftone.html  fn.inc_luminosity.html  fn.multiple_offsets.html  fn.offset.html  fn.offset_blue.html  fn.offset_green.html  fn.offset_red.html  fn.primary.html  fn.ripple.html  fn.solarize.html  fn.square_distance.html  halftone.v.html  index.html  (+5 more)
docs/guide/: 404.html  index.html  sitemap.xml
docs/icons-5d008e6785a1d242e8d42fa7b71afee3/: .cache  manifest.json  manifest.webapp
docs/img_examples/: cube_demo.gif.REMOVED.git-id  desktop.ini
docs/src/: demo.html  index.html
examples/: example.rs
img_examples/urban_decay/: decompose_min.PNG.REMOVED.git-id
js/: index.js
photon-docs/: README.md  mkdocs.yml
photon-docs/docs/: all-effects.md  contact-developer.md  getting-started.md  index.md  native-tutorial.md  serialize-to-json.md  using-photon-natively.md  using-photon-node.md  using-photon-web.md  web-tutorial.md
react_app_demo/: README.md  package.json
react_app_demo/src/: App.css  App.js
site/: README.md  index.html  script.js  styles.css  webpack.common.js  webpack.dev.js  webpack.prod.js
site/src/: demo.html  index.html  index.js
src/: channels.rs  conv.rs  correction.rs  effects.rs  filters.rs  helpers.rs  lib.rs  monochrome.rs  multiple.rs  noise.rs
webpack_demo/: README.md  index.html  package.json  webpack.config.js
webpack_demo/js/: index.js
(+344 files in other folders)
