[package]
authors = ["Silvia O'Dwyer <silviaodwyerdev@gmail.com>"]
categories = ["wasm", "multimedia"]
description = "High-performance image processing library for native use and the web"
license = "Apache-2.0"
name = "photon-rs"
readme = "./README.md"
repository = "https://github.com/silvia-odwyer/photon"
version = "0.1.0"
edition = "2018"
exclude = [
    "pkg/*",
    "examples/input_images/*"
]
homepage = "https://silvia-odwyer.github.io/photon/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image="0.21.1"
palette="0.5.0"
rand="0.7.2"
num="0.2.0"
imageproc="0.18.0"
rusttype="0.7.6"
base64="0.11.0"
wasm-bindgen = "0.2.25"
rustc-serialize = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
regex="*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
time="0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CanvasRenderingContext2d", 
  "ImageData", 
  "HtmlCanvasElement", 
  "HtmlImageElement",
  "console",
  'CssStyleDeclaration',
  'EventTarget',
]

[features]
default = ["console_error_panic_hook"]